; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/le/extr_if_le_ledma.c_le_dma_setaui.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/le/extr_if_le_ledma.c_le_dma_setaui.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lance_softc = type { i32 }
%struct.lsi64854_softc = type { i32 }
%struct.le_dma_softc = type { %struct.lsi64854_softc* }

@E_TP_AUI = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lance_softc*)* @le_dma_setaui to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @le_dma_setaui(%struct.lance_softc* %0) #0 {
  %2 = alloca %struct.lance_softc*, align 8
  %3 = alloca %struct.lsi64854_softc*, align 8
  store %struct.lance_softc* %0, %struct.lance_softc** %2, align 8
  %4 = load %struct.lance_softc*, %struct.lance_softc** %2, align 8
  %5 = bitcast %struct.lance_softc* %4 to %struct.le_dma_softc*
  %6 = getelementptr inbounds %struct.le_dma_softc, %struct.le_dma_softc* %5, i32 0, i32 0
  %7 = load %struct.lsi64854_softc*, %struct.lsi64854_softc** %6, align 8
  store %struct.lsi64854_softc* %7, %struct.lsi64854_softc** %3, align 8
  %8 = load %struct.lsi64854_softc*, %struct.lsi64854_softc** %3, align 8
  %9 = load %struct.lsi64854_softc*, %struct.lsi64854_softc** %3, align 8
  %10 = call i32 @L64854_GCSR(%struct.lsi64854_softc* %9)
  %11 = load i32, i32* @E_TP_AUI, align 4
  %12 = xor i32 %11, -1
  %13 = and i32 %10, %12
  %14 = call i32 @L64854_SCSR(%struct.lsi64854_softc* %8, i32 %13)
  %15 = call i32 @DELAY(i32 20000)
  ret void
}

declare dso_local i32 @L64854_SCSR(%struct.lsi64854_softc*, i32) #1

declare dso_local i32 @L64854_GCSR(%struct.lsi64854_softc*) #1

declare dso_local i32 @DELAY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
